# clases-python-intermedio

./: .gitignore  .pre-commit-config.yaml  README.md  apuntes.py  ejercicios.py  instrucciones_nuevo_repo.md  mis_notas.py  practica.py  pyproject.toml  readme.md  repaso.md  run_tests.py
codigo/: abc_protocolos.py  banco.py  decoradores.py  funcional.py  herramientas.py  hilos.py  iteradores.py  oop_avanzado.py  stdlib_colecciones.py
ejercicios/clase_1/: ejercicios.py
tests/: conftest.py  test_ejercicios.py
tests/integration/: test_ejercicios.py
tests/unit/: test_ejercicios.py
